<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bidit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="back">Back</string>
    <string name="browse_title">Browse Products</string>
    <string name="camera">Camera</string>
    <string name="capture_image">To sell, click on camera to capture image</string>
    <string name="bid_prompt">Bid on this item?</string>
    <string name="your_bid">Bid Amount</string>
    <string name="bid_prompt_yes">Bid!</string>
    <string name="post">Post</string>
    <string name="bid_prompt_no">Cancel</string>
    <string name="title_activity_confirm_post">ConfirmPost</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="min_price">Min. Price</string>
    <string name="description">Description</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="price">Price</string>
    <string name="logout">Logout</string>
    <string name="myitems">My Items</string>
    <string name="mymessages">My Messages</string>
    <string name="descr_image">descr_image</string>
    <string name="confirm">Confirm password</string>
    <string name="message">Type your message here</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reply_to_message">Reply</string>
    <string name="myMessages">My Messages</string>
    <string name="myItems">My Items</string>

</resources>
