<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".ConfirmPost" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->


    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:keepScreenOn="true"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold" >
        
        <ImageView
            android:id="@+id/fullscreen_content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_weight="16.41"
            android:gravity="center"
            android:keepScreenOn="true"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="#80000000"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="$" 
                android:textSize="25dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:paddingTop="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                />

            <EditText
                android:id="@+id/priceText"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:ems="10"
                android:textColor="#FFFFFF"
                android:windowSoftInputMode="stateUnchanged|adjustPan"
                android:hint="@string/min_price"
                android:inputType="number" >

            </EditText>

            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.89"
                android:windowSoftInputMode="stateUnchanged|adjustPan"
                android:singleLine="true"
                android:ems="10"
                android:textColor="#FFFFFF"
                android:hint="@string/description"
                android:inputType="text" />
            
            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="?buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="#009900"
                android:layout_weight=".1"
                android:gravity="center|bottom"
                android:orientation="vertical"
                tools:ignore="UselessParent" >
            
             <Button
                 android:id="@+id/post_button"
                 style="?buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#009900"
                 android:text="@string/post"
                 android:textColor="#FFFFFF" />

             </LinearLayout>
             
        </LinearLayout>
    
     </LinearLayout>
     
    
     <!--
     
     <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="#009900"
            android:orientation="vertical"
       		android:layout_weight="1"
       		android:gravity="center|bottom"
            tools:ignore="UselessParent" >
            
            

           
            
        </LinearLayout>

   
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
         
         <ImageView
        android:id="@+id/fullscreen_content1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_weight="15"
        android:layout_gravity="top"
        android:gravity="fill_vertical"
        android:keepScreenOn="true"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:background="#FFFFFF"
        android:textStyle="bold" />
    



    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >
        

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
       		android:layout_weight="1"
       		android:gravity="center|bottom"
            tools:ignore="UselessParent" >
            
            

            <Button
                android:id="@+id/post_button"
                style="?buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post" />
        </LinearLayout>

        

    </FrameLayout>
    -->

</LinearLayout>
